--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "antd": "^3.16.3",
+    "axios": "^0.18.0",
     "immutable": "^4.0.0-rc.12",
+    "jsonp": "^0.2.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mini-store": "^2.0.0",
